--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.ts",
+  "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.ts",
+    "dev": "nodemon src/server.ts"
   },
   "author": "prabashmperera",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^8.20.0",
