--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "google-auth-library": "^10.5.0",
     "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "mongoose": "^8.20.0",
     "nodemon": "^3.1.11",
-    "openai": "^6.10.0"
+    "openai": "^6.10.0",
+    "serverless-http": "^4.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
